# cala-tourist

./: .gitignore  Cargo.toml  README.md
fake_data/: Cargo.toml
fake_data/src/: main.rs
server/: Cargo.toml
server/migrations/2023-06-29-021011_attraction_type/: down.sql  up.sql
server/migrations/2023-06-29-021030_country/: up.sql
server/migrations/2023-06-29-021040_city/: down.sql  up.sql
server/migrations/2023-06-29-021956_attraction/: down.sql  up.sql
server/migrations/2023-06-29-022320_attraction_rating/: down.sql  up.sql
server/migrations/2023-07-30-191938_attraction_rating_aggregate/: down.sql  up.sql
server/migrations/2023-08-20-231850_similarity/: down.sql  up.sql
server/src/: application.rs  errors.rs  main.rs  model.rs  schema.rs
server/src/application/: app.rs  attraction_api.rs  similarity_api.rs
server/src/db/: database.rs
server/src/model/: attraction.rs  attraction_controller.rs  attraction_repository.rs  attraction_similarity.rs  similarity_controller.rs  similarity_generator.rs  similarity_repository.rs
